@@ -5,6 +5,15 @@ use 5.006;
 use strict;
 use warnings;
 
+sub TO_JSON {
+    require Data::Structure::Util;
+    require Cpanel::JSON::XS;
+    require Storable;
+
+    my $copy = Storable::dclone($_[0]);
+    return  Cpanel::JSON::XS::encode_json(Data::Structure::Util::unbless($copy));
+}
+
 sub new {
         # hash or hash ref
         my $class = shift;
@@ -125,5 +134,11 @@ array of the extracted TAP::DOMs.
 
 All parameters are passed through to TAP::DOM, except C<source> which
 specifies the file to parse and C<tap> which is ignored.
+
+=head2 TO_JSON
+
+Returns JSON formatted string based on L<Cpanel::JSON::XS>.
+
+Usually be used implicitely by JSON aware fromeworks like Mojo.
 
 =cut
